# clang-tidy-clang-format-cppcheck-cmake-targets

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci-pipeline.yml
cmake/: clang-format.cmake  clang-tidy.cmake  collect-sources.cmake  cppcheck.cmake
